# win_manifests

./: CMakeLists.txt  LICENSE  dpiAwareness.manifest  longPathAwareness.manifest  opt-trustinfo.manifest  osVersion.manifest  utf-8.manifest
